<resources>
    <string name="app_name">Carta</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Cuentas</string>
    <string name="nomRestaurant">Restaurante Conchita</string>
    <string name="botonMenu">Menu</string>
    <string name="botonOrdenes">Ordenes</string>
    <string name="botonLLamadomesero">Para llamar al mesero preciona el icono</string>
    <string name="textoPedircuentas">En cuantas cuentas desea su orden</string>
    <string name="textoPedirnummesa">Introduce el numero de mesa de la orden</string>
    <string name="menu_ordenar">Ver orden</string>
    <string name="botonOrdenar">Ordenar</string>
    <string name="menu_pagar">Pagar</string>
    <string name="ordenes_pidenumero">1-10</string>
    <string name="title_activity_main22">Menu</string>
    <string name="ordenar">Ordenar</string>
    <string name="title_activity_main23">Confirmar orden</string>
    <string name="confirmar_orden">Confirmar orden</string>
    <string name="textoEliminarplatillo">Selecciona un platillo si lo quieres eliminar</string>
    <string name="desayunos">Desayunos</string>
    <string name="regresarMenu">Regresar al menu</string>
    <string name="botonEntradas">Entradas</string>
    <string name="botonSopas">Sopas</string>
    <string name="botonQuesos">Quesos</string>
    <string name="botonEnsaladas">Ensaladas</string>
    <string name="botonFiletes">Filetes</string>
    <string name="botonMenudia">Menu del dia</string>
    <string name="title_activity_main_ordenes">MainOrdenes</string>
    <string name="textoOrdenesdemesa">Orden de la mesa</string>
    <string name="botonActualizarordenes">Actualizar lista</string>
    <string name="textoVerordenes">Selecciona tu orden</string>
    <string name="title_activity_main_editarorden">MainEditarorden</string>
    <string name="textoVerorden">Ver orden</string>
    <string name="textoEnorden">Orden\n\n\n\n\n\n\n\n\</string>
    <string name="title_activity_main_pagar">MainPagar</string>
    <string name="botonAñadirplatillo">Añadir platillo</string>
    <string name="botonBorrarplatillo">Borrar platillo</string>
    <string name="botonCancelarorden">Cancelar orden</string>
    <string name="botonStatus">En espera</string>
    <string name="title_activity_main_addorden">MainAddorden</string>
    <string name="textoPagar">Cuenta</string>
    <string name="textoGracias">Gracias por su consumo, pagar en caja</string>
</resources>
