<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainCuentas"
    tools:showIn="@layout/activity_cuentas">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nomRestaurant"
        android:id="@+id/textoNomrestaurant"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorLetras"
        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textoPedircuentas"
        android:id="@+id/textoPreguntacuentas"
        android:layout_alignTop="@+id/numeroCuentas"
        android:layout_toLeftOf="@+id/numeroCuentas"
        android:layout_toStartOf="@+id/numeroCuentas"
        android:textColor="@color/colorLetras"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numeroCuentas"
        android:hint="@string/ordenes_pidenumero"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/textoNomrestaurant"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/colorLetras"
        android:layout_toRightOf="@+id/textoNomrestaurant"
        android:layout_toEndOf="@+id/textoNomrestaurant" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoPedirnummesa"
        android:id="@+id/textoPreguntamesa"
        android:textColor="@color/colorLetras"
        android:textSize="18sp"
        android:layout_below="@+id/textoPreguntacuentas"
        android:layout_toStartOf="@+id/numeroMesa"
        android:layout_marginTop="41dp"
        android:layout_toLeftOf="@+id/numeroMesa" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/ordenes_pidenumero"
        android:id="@+id/numeroMesa"
        android:layout_alignBottom="@+id/textoPreguntamesa"
        android:layout_toRightOf="@+id/textoPreguntacuentas"
        android:layout_toEndOf="@+id/textoPreguntacuentas"
        android:textColor="@color/colorLetras"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonOrdenar"
        android:id="@+id/botonOrdenar"
        android:background="@color/colorBotones"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/numeroMesa"
        android:layout_toStartOf="@+id/numeroMesa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/botonLLamadomesero"
        android:id="@+id/textoLLamarmesero"
        android:textColor="@color/colorLetras"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="134dp" />




</RelativeLayout>
