<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.soft.bremotlajugo.aplicacioncarta.MainOrdenes"
    tools:showIn="@layout/activity_ordenes">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoOrdenesdemesa"
        android:textColor="@color/colorLetras"
        android:id="@+id/textoOrdenes"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:id="@+id/listaOrdenes"
        android:background="@color/colorLetras"
        android:layout_below="@+id/textoOrdenes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botonActualizarordenes"
        android:id="@+id/botonActualizarordenes"
        android:background="@color/colorBotones"
        android:textColor="@color/colorLetras"
        android:layout_below="@+id/listaOrdenes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoVerordenes"
        android:textColor="@color/colorLetras"
        android:id="@+id/textoSeleccionorden"
        android:layout_below="@+id/textoOrdenes"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoVerorden"
        android:id="@+id/botonVerorden"
        android:background="@color/colorBotones"
        android:textColor="@color/colorLetras"
        android:layout_alignBottom="@+id/botonActualizarordenes"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
