<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/fondo"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.soft.bremotlajugo.aplicacioncarta.MainPagar"
    tools:showIn="@layout/activity_pagar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoPagar"
        android:textColor="@color/colorLetras"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoVerorden"
        android:textColor="@color/colorLetras"
        android:id="@+id/textoPagar"
        android:textSize="20dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="58dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoPagar"
        android:id="@+id/textoElementos"
        android:textColor="@color/colorLetras"
        android:textSize="20dp"
        android:layout_marginBottom="187dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoPagar"
        android:id="@+id/textoTotal"
        android:textSize="20dp"
        android:textColor="@color/colorLetras"
        android:layout_alignTop="@+id/textoElementos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoGracias"
        android:id="@+id/textView4"
        android:textColor="@color/colorLetras"
        android:layout_toStartOf="@+id/botonirpagar"
        android:textSize="20dp"
        android:layout_below="@+id/botonirpagar"
        android:layout_toLeftOf="@+id/botonirpagar" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_pagar"
        android:textColor="@color/colorLetras"
        android:background="@color/colorBotones"
        android:id="@+id/botonirpagar"
        android:layout_alignTop="@+id/textoTotal"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
