<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainConfirmarorden"
    tools:showIn="@layout/activity_confirmarorden">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textoEliminarplatillo"
        android:textColor="@color/colorLetras"
        android:id="@+id/textoEliminarplatillo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmar_orden"
        android:id="@+id/button6"
        android:textColor="@color/colorLetras"
        android:background="@color/colorBotones"
        android:layout_marginBottom="170dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listViewOrden"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorLetras"
        android:layout_below="@+id/textoEliminarplatillo"
        android:layout_above="@+id/button6"
        android:background="@color/colorLetras"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regresarMenu"
        android:id="@+id/button7"
        android:textColor="@color/colorLetras"
        android:background="@color/colorBotones"
        android:layout_marginTop="78dp"
        android:layout_alignTop="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancelar"
        android:id="@+id/botonCancelarorden"
        android:textColor="@color/colorLetras"
        android:background="@color/colorBotones"
        android:layout_alignTop="@+id/button6"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
